[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.8.0-beta", features = ["csr"] }
leptos_meta = { version = "0.8.0-beta" }
leptos_transition_group = { path = "../../" }
thaw = { git = "https://github.com/thaw-ui/thaw", branch = "thaw/v0.5", features = ["csr"] }